--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
 <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-            <h1>Hola</h1>
-   <p>NUEvo</p>
+        <div id="container">
+        <div id="post">
+            <h1>Este es el titulo 
+                atractivo e interesante del 
+                post    </h1>
+   <p>Y este es el parrafo de inicio donde vamos explicar
+       las cosas increibles que se 
+       se pueden hacer con las ramas
+   </p>
+        </div>        
+</div>
+
         </body>
 </html>
