agregagdo contenido adicional y mejor tipografia

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
    <p>Y este es el parrafo de inicio donde vamos explicar
        las cosas increibles que se 
        se pueden hacer con las ramas
+   </p><p>
+       Los blogs son la mejor forma de compartir informacion y 
+       tus ideas . Mucho mas que ir a conferencia o salir en youtube
+       Excepto si eres un rockstar. Pero estadisticamente
+       no lo ere.. por ahora  
    </p>
         </div>        
 </div>
