--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div id="container">
         <div id="cabecera">
         Hyperblog
-        <span id="tagline">Tu Blog de confianza</span>
+        <span id="tagline">Tu Blog de maestro</span>
         </div>
         <div id="post">
             <h1>Este es el titulo 
@@ -21,7 +21,7 @@
        tus ideas . Mucho mas que ir a conferencia o salir en youtube
        Excepto si eres un rockstar. Pero estadisticamente
        no lo ere.. por ahora  
-   </p>
+   </p><p>subscribete y dale like</p>
         </div>        
 </div>
 
