una version de el hyperblog

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-<title>Bienvenido  Hyperblog</title>
+<title>Bienvenido  Hyperblog 2</title>
 <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
