--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/icono.png"></img>
         Hyperblog
         <span id="tagline">Tu Blog de cabecera</span>
         </div>
