--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
        Excepto si eres un rockstar. Pero estadisticamente
        no lo ere.. por ahora  
    </p><p>subscribete y dale like</p>
-        </div>        
+        </div> 
+<div id="footer">
+ hecho con amor
+</div>       
 </div>
 
         </body>
