--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        se pueden hacer con las ramas
    </p><p>
        Los blogs son la mejor forma de compartir informacion y 
-       tus ideas . Mucho mas que ir a conferencia o salir en youtube
+       tus ideas . Mucho mas qué ir a conferencia o salir en youtube
        Excepto si eres un rockstar. Pero estadisticamente
        no lo ere.. por ahora  
    </p><p>subscribete y dale like</p>
